Fixed md-cards for suggestions not showing up when no search result

--- a/css/1-colors.css
+++ b/css/1-colors.css
@@ -681,9 +681,3 @@ md-list.prm-list.prm-linkable-list-items .md-button.arrow-link-button md-list-it
     color: #7d1538; }
 .prm-personalization-bg, prm-search-result-list prm-personalize-results-button .md-button md-switch.md-checked .md-bar, prm-search-result-list prm-personalize-results-button .md-button md-switch.md-checked ._md-bar, prm-search-result-list prm-personalize-results-button .md-button md-switch._md-checked .md-bar, prm-search-result-list prm-personalize-results-button .md-button md-switch._md-checked ._md-bar, prm-search-result-list prm-personalize-results-button .md-button md-switch.md-checked .md-thumb, prm-search-result-list prm-personalize-results-button .md-button md-switch.md-checked ._md-thumb, prm-search-result-list prm-personalize-results-button .md-button md-switch._md-checked .md-thumb, prm-search-result-list prm-personalize-results-button .md-button md-switch._md-checked ._md-thumb, .sidebar .personalization-section md-checkbox.md-checked .md-icon, .sidebar .personalization-section .sidebar-list li:before, .sidebar .personalization-section ul li:before {
     background-color: #7d1538; }
-
-/* primary color hook end*/
-
-prm-no-search-result > md-card {
-    display:none;
-}
